# PDF-Editor

./: package.json  pnpm-lock.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  ocr.rs  pdf_ops.rs
src/routes/: +page.svelte
