[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.33.0"
pdf-writer = "0.12.0"
rayon = "1.8"
image = "0.24"
base64 = "0.21"
windows = { version = "0.52.0", features = [
    "Media_Ocr",
    "Storage_Streams",
    "Graphics_Imaging",
    "Foundation",
    "Foundation_Collections",
] }
rfd = "0.17.2"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }


